[gd_scene load_steps=18 format=3 uid="uid://bt28emtj6uskf"]

[ext_resource type="Texture2D" uid="uid://b8y4fm73hxdj3" path="res://graphics/Player/ami.png" id="1_170ft"]
[ext_resource type="Script" uid="uid://b0sit605iq3du" path="res://scene_scripts/player.gd" id="1_ftni2"]
[ext_resource type="Resource" uid="uid://b0hsqpsbbcyhx" path="res://resources/player_stats_manager.tres" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://dgpu2o3b4xhk1" path="res://graphics/Enemies/ami_sprites.png" id="3_qlg0r"]
[ext_resource type="AudioStream" uid="uid://2aa76flvsjtc" path="res://graphics/Audio/player_walking.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://d4llpig8jdkqy" path="res://graphics/Audio/sfx agh.wav" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://c6ey4yj65bemv" path="res://graphics/Audio/sfx ow.wav" id="7_smehm"]
[ext_resource type="AudioStream" uid="uid://bnmydyw5sw2nt" path="res://graphics/Audio/sfx you're finished bucko.wav" id="8_ur7pv"]
[ext_resource type="AudioStream" uid="uid://cto6ns1c33vn2" path="res://graphics/Audio/sfx ha.wav" id="9_y4r1p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ftni2"]
radius = 13.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ftni2"]
radius = 19.0

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exchu:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Embrace:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hanger:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "embrace_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Embrace:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 2, 0]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "exchu_attack"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exchu:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.366667, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 3]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "hanger_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hanger:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fjrip"]
_data = {
&"RESET": SubResource("Animation_qlg0r"),
&"embrace_attack": SubResource("Animation_fjrip"),
&"exchu_attack": SubResource("Animation_tuyoq"),
&"hanger_attack": SubResource("Animation_smehm")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ur7pv"]
polygon = PackedVector2Array(-1, -25, -14, -16, -19, -2, -15, 16, 0, 25, 15, 16, 20, 0, 14, -15)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("ow_sfx", "agh_sfx", "rage_sfx", "skill_sfx") groups=["player"]]
collision_mask = 58
motion_mode = 1
platform_floor_layers = 0
script = ExtResource("1_ftni2")
stats = ExtResource("2_qhqgy")
ow_sfx = NodePath("AudioAw")
agh_sfx = NodePath("AudioAgh")
rage_sfx = NodePath("AudioRage")
skill_sfx = NodePath("AudioSkill")

[node name="Embrace" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.90735e-06, 4.76837e-07)
rotation = 1.5708
scale = Vector2(1.24112, 1.29986)
texture = ExtResource("3_qlg0r")
hframes = 4
vframes = 4

[node name="Exchu" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, 2)
rotation = 1.5708
scale = Vector2(1.12008, 1.10356)
texture = ExtResource("3_qlg0r")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 69, 256, 60)

[node name="Hanger" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.19209e-07, -5.96046e-08)
rotation = 1.5708
scale = Vector2(1.17117, 1.21542)
texture = ExtResource("3_qlg0r")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 133, 256, 63)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, 7.15256e-07)
rotation = 1.5708
scale = Vector2(1.33409, 1.44774)
texture = ExtResource("1_170ft")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ftni2")
metadata/_edit_lock_ = true

[node name="ProjectileMarker" type="Marker2D" parent="."]
position = Vector2(17, 0)
metadata/_edit_lock_ = true

[node name="HurtBox" type="Area2D" parent="." groups=["player", "player_hurtbox"]]
position = Vector2(13, 0)
collision_layer = 64
collision_mask = 132
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-13, 0)
shape = SubResource("CircleShape2D_ftni2")
debug_color = Color(0.75188, 0.383535, 0.655499, 0.42)
metadata/_edit_lock_ = true

[node name="RageCoolingTimer" type="Timer" parent="."]

[node name="RegenTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Debug Label" type="Label" parent="CanvasLayer"]
offset_left = 4.0
offset_top = 99.0
offset_right = 44.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 10

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")
volume_db = 5.0
bus = &"SFX"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fjrip")
}

[node name="popup" type="Marker2D" parent="."]
metadata/_edit_lock_ = true

[node name="SkillMarkers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SkillMarkers"]
position = Vector2(53, 0)

[node name="Marker2D2" type="Marker2D" parent="SkillMarkers"]
position = Vector2(39, 36)
rotation = 0.785398

[node name="Marker2D3" type="Marker2D" parent="SkillMarkers"]
position = Vector2(0, 53)
rotation = -4.71239

[node name="Marker2D5" type="Marker2D" parent="SkillMarkers"]
position = Vector2(-38, 37)
rotation = -3.92699

[node name="Marker2D4" type="Marker2D" parent="SkillMarkers"]
position = Vector2(-53, 0)
rotation = 3.14159

[node name="Marker2D7" type="Marker2D" parent="SkillMarkers"]
position = Vector2(-38, -37)
rotation = -2.35619

[node name="Marker2D6" type="Marker2D" parent="SkillMarkers"]
position = Vector2(0, -53)
rotation = -1.5708

[node name="Marker2D8" type="Marker2D" parent="SkillMarkers"]
position = Vector2(38, -37)
rotation = -0.785398

[node name="AudioAgh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fjrip")
volume_db = -6.582
bus = &"SFX"

[node name="AudioAw" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_smehm")
volume_db = -5.924
bus = &"SFX"

[node name="AudioRage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ur7pv")
volume_db = -7.916
bus = &"SFX"

[node name="AudioSkill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_y4r1p")
volume_db = -9.491
bus = &"SFX"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_ur7pv")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="RageCoolingTimer" to="." method="_on_rage_cooling_timer_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
